# testing_pandas

./: .env  Dockerfile  Makefile  docker-compose.base.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  setup-dev.sh  test.csv
src/: settings.py  urls.py
src/core/: models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_alter_data_options_alter_data_record_and_more.py
src/reader/: dataframe.py  main.py  splice.py
src/reader/data/: 20230719.csv  20230720.csv  20230721.csv  20230722.csv  20230723.csv  20230724.csv  20230725.csv  20230726.csv  20230727.csv  20230728.csv  20230729.csv  20230730.csv  20230731.csv  20230801.csv  20230802.csv  20230803.csv  20230804.csv  20230805.csv  20230806.csv  20230807.csv  20230808.csv  20230809.csv  20230810.csv  20230811.csv  20230812.csv  20230813.csv  20230814.csv  20230815.csv  20230816.csv  20230817.csv  20230818.csv  20230819.csv  20230820.csv  20230821.csv  20230822.csv  20230823.csv  20230824.csv  20230825.csv  20230826.csv  20230827.csv  (+82 more)
src/reader/filtered_data/: 2023-07-20__2023-07-22.csv  reset.csv
